# cross_shopper_backend

./: .flake8  .gitignore  .pre-commit-config.yaml  .vale.ini  AGENTS.md  CODING_STANDARDS.md  CONTRIBUTING.md  Makefile  README.md  REPORT.md  audit_docstrings.py  audit_report.txt  coverage_output.txt  pyproject.toml  report.json
.github/config/actions/: gaurav-nelson-github-action-markdown-link-check.json
.github/scripts/: job-50-test-precommit.sh  step-setup-environment.sh
.github/workflows/: workflow-push.yml
.vale/Vocab/cross_shopper/: accept.txt
cross_shopper/: conftest.py  manage.py
cross_shopper/api/: apps.py  urls.py
cross_shopper/api/models/: __init__.py
cross_shopper/api/models/factories/: user.py
cross_shopper/api/models/fixtures/: __init__.py  client.py  user.py
cross_shopper/api/types/: report_summary.ts
cross_shopper/api/views/: __init__.py
cross_shopper/api/views/errors/: __init__.py  filters.py
cross_shopper/api/views/factories/: __init__.py  typing.py  user.py
cross_shopper/api/views/fixtures/: client.py  user.py
cross_shopper/api/views/pricing/: __init__.py  filters.py
cross_shopper/api/views/report_json/: __init__.py
cross_shopper/api/views/report_pricing/: __init__.py
cross_shopper/api/views/report_summary/: __init__.py  filters.py  qs.py
cross_shopper/api/views/report_target/: __init__.py  filters.py
cross_shopper/api/views/reports/: __init__.py  filters.py  qs.py
cross_shopper/api/views/scrapers/: __init__.py  filters.py
cross_shopper/config/: __init__.py  address.py  admin.py  bleach.py  constance.py  development.py  params.py  production.py  rest_framework.py
cross_shopper/config/shared/: __init__.py  bleach.py  constance.py  nh3.py  rest_framework.py
cross_shopper/errors/: __init__.py  apps.py
cross_shopper/errors/admin/: __init__.py  error.py  error_type.py
cross_shopper/errors/admin/filters/: __init__.py  error.py
cross_shopper/errors/admin/list_display/: error.py
cross_shopper/errors/admin/list_displays/: __init__.py  error.py
cross_shopper/errors/admin/list_filter/: error.py
cross_shopper/errors/admin/list_filters/: __init__.py  error.py
cross_shopper/errors/admin/tests/: conftest.py  test_error_admin.py  test_error_type_admin.py
cross_shopper/errors/migrations/: 0001_initial.py  0002_error_count.py
cross_shopper/errors/models/: __init__.py  error.py  error_type.py
cross_shopper/errors/models/factories/: __init__.py  error.py  error_type.py  typing.py
cross_shopper/errors/models/fixtures/: __init__.py  error.py  error_type.py
cross_shopper/errors/models/serializers/: __init__.py  error.py
cross_shopper/errors/models/tests/: test_error.py  test_error_type.py
cross_shopper/items/: __init__.py  apps.py  constants.py
cross_shopper/items/admin/: __init__.py  attribute.py  brand.py  item.py  item_attribute.py  item_scraper_config.py  packaging.py  packaging_container.py  packaging_unit.py  price_group.py  price_group_attribute.py
cross_shopper/items/admin/filters/: __init__.py  item.py  item_scraper_config.py  packaging.py  scraper_config.py
cross_shopper/items/admin/inlines/: __init__.py
cross_shopper/items/admin/list_display/: item_scraper_config.py
cross_shopper/items/admin/list_displays/: __init__.py  attribute.py  item.py  item_attribute.py  item_scraper_config.py  price_group.py  price_group_attribute.py
cross_shopper/items/admin/list_filter/: item.py  item_scraper_config.py  packaging.py
cross_shopper/items/admin/list_filters/: __init__.py  attribute.py  item.py  item_attribute.py  item_scraper_config.py  packaging.py  price_group.py  price_group_attribute.py
cross_shopper/items/migrations/: 0001_initial.py  0002_alter_packaging_quantity.py  0003_alter_itemscraperconfig_constraints.py  0004_alter_itemscraperconfig_managers.py  0005_add_item_attribute.py  0006_populate_item_attribute.py  0007_refactored_title_field.py  0008_add_item_price_group.py  0009_populate_item_price_group.py
cross_shopper/items/models/: __init__.py  attribute.py  brand.py  item.py  item_attribute.py  item_scraper_config.py  packaging.py  packaging_container.py  packaging_unit.py  price_group.py  price_group_attribute.py
cross_shopper/pricing/: apps.py  constants.py
cross_shopper/pricing/admin/: __init__.py  price.py
cross_shopper/pricing/migrations/: 0001_initial.py
cross_shopper/pricing/models/: __init__.py  pricing.py
cross_shopper/reports/: apps.py
cross_shopper/reports/admin/: __init__.py  report.py  report_store.py
cross_shopper/reports/migrations/: 0001_initial.py  0002_initial.py  0003_report_is_testing_only.py  0004_report_is_testing.py  0005_alter_report_name_constraints.py  0006_refactored_title_field.py
cross_shopper/reports/models/: __init__.py  report.py  report_store.py
cross_shopper/root/: __init__.py  asgi.py  urls.py  wsgi.py
cross_shopper/scrapers/: __init__.py  apps.py
cross_shopper/scrapers/admin/: __init__.py  scraper.py  scraper_config.py
cross_shopper/scrapers/migrations/: 0001_initial.py  0002_remove_scraper_pricing_bulk_regex_and_more.py  0003_scraperconfig_is_active.py  0004_alter_scraperconfig_url_constraints.py  0005_refactored_title_field.py
cross_shopper/scrapers/models/: __init__.py  scraper.py  scraper_config.py
cross_shopper/stores/: __init__.py  apps.py
cross_shopper/stores/admin/: __init__.py  franchise.py  store.py
cross_shopper/stores/migrations/: 0001_initial.py
cross_shopper/stores/models/: __init__.py  franchise.py  store.py
cross_shopper/templates/admin/: base_site.html
cross_shopper/utilities/: __init__.py  apps.py
cross_shopper/utilities/admin/: __init__.py  address.py  list_display_column.py
cross_shopper/utilities/cache/: __init__.py  decorator.py
cross_shopper/utilities/management/: __init__.py
cross_shopper/utilities/models/: __init__.py
cross_shopper/utilities/strings/: __init__.py  title.py
cross_shopper/utilities/testing/: __init__.py
cross_shopper/utilities/views/: __init__.py
scripts/: snapshot.sh
stubs/constance/: __init__.pyi  test.pyi
stubs/django_bleach/: models.pyi  utils.pyi
(+615 files in other folders)
