[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']

[tool]
[tool.commitizen]
bump_message = 'bump(RELEASE): $current_version → $new_version'
pre_bump_hooks = ['poetry run pre-commit run --hook-stage=manual commitizen-pre-bump --files pyproject.toml -c .cicd-tools/configuration/pre-commit-bootstrap.yaml || true']
version = '0.1.0'
version_files = ['pyproject.toml:version']
version_provider = 'poetry'

[tool.coverage]
[tool.coverage.report]
exclude_also = ['\.\.\.']
exclude_lines = ['no cover']
fail_under = 100
ignore_errors = true
precision = 1

[tool.coverage.run]
branch = true
omit = ['cross_shopper/manage.py', 'cross_shopper/root/*', '*/test*', '*/app.py', '*/migrations/*.py', '*/typing.py']
source = ['./cross_shopper']

[tool.django-stubs]
django_settings_module = 'config'

[tool.mypy]
ignore_missing_imports = false
mypy_path = '$MYPY_CONFIG_FILE_DIR/stubs'
plugins = ['mypy_django_plugin.main']

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ['address.*', 'constance.*']

[tool.poetry]
authors = ['Niall Byrne <9848926+niall-byrne@users.noreply.github.com>']
description = ''
name = 'cross-shopper'
package-mode = false
readme = 'README.md'
version = '0.1.0'

[tool.poetry.dependencies]
django = '^4.2.27'
django-address = '^0.2.8'
django-bleach = '^3.1.0'
django-constance = '^4.3.2'
django-filter = '^25.1'
django-stubs-ext = '^5.0.4'
djangorestframework = '^3.15.2'
drf-nested-routers = '^0.94.1'
python = '^3.9'
python-dotenv = '^1.0.1'

[tool.poetry.group]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
commitizen = '^3.29.0'
coverage = '^7.6.1'
django-filter-stubs = '^0.1.3'
factory-boy = '^3.3.1'
freezegun = '^1.5.1'
markdown = '^3.7'
mypy = '^1.7.1'
pre-commit = '^3.8.0'
pytest = '^8.3.2'
pytest-django = '^4.8.0'
types-bleach = '^6.1.0.20240331'
types-factory-boy = '^0.4.1'

[tool.poetry.group.dev.dependencies.django-stubs]
extras = ['compatible-mypy']
version = '^4.0.0'

[tool.poetry.group.dev.dependencies.djangorestframework-stubs]
extras = ['compatible-mypy']
version = '^3.0.0'

[tool.pytest]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'config'
filterwarnings = ['ignore:ItemFactory._after_postgeneration:DeprecationWarning', 'ignore:ReportFactory._after_postgeneration:DeprecationWarning']
python_files = ['test_*.py']

[tool.ruff]
exclude = ['.git', '__pycache__', '.mypy_cache', '*/migrations/*.py', 'cross_shopper/manage.py', 'cross_shopper/root/asgi.py', 'cross_shopper/root/wsgi.py', 'cross_shopper/root/urls.py']
indent-width = 2
line-length = 80

[tool.ruff.format]
quote-style = 'preserve'

[tool.ruff.lint]
extend-select = ['I']
fixable = ['ALL']
ignore = ['D105', 'D106', 'D107', 'D203', 'D213']
select = ['D', 'E', 'F']
unfixable = []

[tool.ruff.lint.isort]
default-section = 'first-party'
length-sort = false
no-lines-before = ['local-folder']
section-order = ['future', 'standard-library', 'third-party', 'first-party', 'local-folder']

[tool.ruff.lint.per-file-ignores]
'*/admin/*.py' = ['D101']
'*/apps.py' = ['D101']
'*/conftest.py' = ['D103']
'*/factories/*.py' = ['D101']
'*/fixtures/*.py' = ['D103']
'*/models/*.py' = ['D101']
'*/tests/*.py' = ['D101', 'D102', 'D104']
'*/types.py' = ['D101']
'cross_shopper/config/__init__.py' = ['D212']

[tool.ruff.lint.pylint]
max-args = 6

[tool.yapf]
align_closing_bracket_with_visual_indent = false
based_on_style = 'google'
dedent_closing_brackets = true
force_multiline_dict = false
indent_width = 2
split_before_logical_operator = true
